# VSL-Compiler

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: linux-build.yml  macos-build.yml
src/: vslc.c
src/backend/: generator.c
src/frontend/: parser.y  scanner.l
src/include/: emit.h  nodetypes.h  symbol_table.h  symbols.h  tree.h  vslc.h
src/middleend/: tree.c
src/symbols/: symbol_table.c  symbols.c
src/utils/: graphviz_output.c
tests/: Makefile  codegen-tester.py
tests/codegen/: all_if_types.vsl  break.vsl  bubble_sort.vsl  factorial.vsl  fibonacci.vsl  if.vsl  quick_sort.vsl  sieve.vsl  simple_break.vsl  simple_if.vsl  simple_while.vsl  while.vsl
tests/optimizations/: arrays.vsl  constant_folding.vsl  peephole.vsl
tests/optimizations/suggested/: arrays.ast  constant_folding.ast  peephole.ast
tests/parser/: arrays.vsl  assignments.vsl  operators.vsl  variables.vsl  while.vsl
tests/parser/suggested/: arrays.ast  assignments.ast  function_call.ast  helloworld.ast  if_else.ast  operators.ast  variables.ast  while.ast
tests/simple-codegen/: arrays.vsl  callframes.vsl  everything.vsl  globals.vsl  locals.vsl  many-params.vsl  math.vsl  simple-array.vsl  simple-call.vsl  simple-locals.vsl  simple-parameters.vsl  simple-print.vsl
tests/symbols/: globals.vsl  locals.vsl  shadowing.vsl  strings.vsl
tests/symbols/suggested/: globals.symbols  locals.symbols  shadowing.symbols  strings.symbols
